# minibot

./: CMakeLists.txt  package.xml
config/: controller.yaml  controller_gz_sim.yaml  joystick_params.yaml  mapper_params_online_async.yaml  mapper_params_online_async_backup.yaml  md_nav2_params.yaml  nav2_params.yaml  nav2_rviz2.rviz  open_rviz2.rviz  sim_config.rviz  slam.rviz  twist_mux.yaml
description/: gz_diff_drive_control.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_control.xacro
launch/: custom.launch.py  custom_robot.launch.py  custom_sim.launch.py  open_rviz2.launch.py  robot.launch.py  robot_navigation.launch.py  sim.launch.py  slam.launch.py
maps/: home.pgm  home.yaml  my_map.pgm  my_map.yaml  sim_map_serial.data
worlds/: custom.sdf
